java17 vector decode opt.
Co-authored-by: Fang-Xie <fang.xie@intel.com>
Co-authored-by: guangzegu <guangze.gu@intel.com>
Co-authored-by: jiyu1021 <yu.ji@intel.com>
Co-authored-by: jatin-bhateja <jatin.bhateja@intel.com>