@@ -131,6 +131,10 @@
       --add-opens=java.base/sun.security.action=ALL-UNNAMED
       --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
     </extraJavaTestArgs>
+
+    <extraJavaVectorTestArgs>
+      --add-modules=jdk.incubator.vector
+    </extraJavaVectorTestArgs>
   </properties>
 
   <modules>
@@ -410,6 +414,9 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-failsafe-plugin</artifactId>
+        <configuration>
+          <argLine>${extraJavaTestArgs}</argLine>
+        </configuration>
         <executions>
           <execution>
             <goals>
@@ -645,7 +652,7 @@
     <profile>
       <id>jdk9+</id>
       <activation>
-        <jdk>[1.9,)</jdk>
+        <jdk>[1.9,16]</jdk>
       </activation>
       <build>
         <plugins>
@@ -655,6 +662,54 @@
             <configuration>
               <release>8</release>
             </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <profile>
+      <id>jdk17</id>
+      <activation>
+        <jdk>17</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+              <source>17</source>
+              <target>17</target>
+              <compilerArgs combine.children="append">
+                <compilerArg>${extraJavaVectorTestArgs}</compilerArg>
+              </compilerArgs>
+            </configuration>
+          </plugin>
+
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-shade-plugin</artifactId>
+            <version>3.4.1</version>
+          </plugin>
+
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-dependency-plugin</artifactId>
+            <version>3.3.0</version>
+            <executions>
+              <execution>
+                <goals>
+                  <goal>analyze-only</goal>
+                </goals>
+                <configuration>
+                  <failOnWarning>true</failOnWarning>
+                  <ignoreNonCompile>true</ignoreNonCompile>
+                  <ignoredNonTestScopedDependencies>
+                    <ignoredNonTestScopedDependency>*</ignoredNonTestScopedDependency>
+                  </ignoredNonTestScopedDependencies>
+                </configuration>
+              </execution>
+            </executions>
           </plugin>
         </plugins>
       </build>
